--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
                 </ol>
 
                 <br>
-            <div >
+            </div>
+            <div>
                  <h4 class="obrigatório">Obrigatório</h4>
             </div>
                 <br>
@@ -117,7 +118,7 @@
             </div>    
                <br>
             <div>
-                <img class="lenço2" src="img/recommended-towel.png">
+                <img class="lenço2" src="./img/recommended-towel.png">
             </div>
                <br>
             <div>
@@ -129,8 +130,22 @@
             <h4 class="bebedouro">Bebedouro</h4>
 
              </div>
+             <br>
+             <img class="bebedouro1" src="./img/partial-fountain.png">
+             <br>
+             <div>
+                <img class="bebedouro2" src="./img/forbidden-fountain.png">
+             </div>
+              <br>
+              <div>
+                 <h4 class="Parcial">Parcial</h4>
+                 <br>
+                 <h4 class="Proibido">Proibido</h4>
+                 <br>
+                 
+              </div>
      </ol>
- </div>
+ 
 
 
 
